Updated .env and hidden my credentials

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-export DATABASE_URL="postgresql://postgres:devarajan#8@localhost:5432/customer_db"
+export GROQ_API_KEY="yours"
+export DATABASE_URL="postgresql://username:password@localhost:5432/customer_db"
